# gridtokenx-apigateway

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  FRONTEND_IMPLEMENTATION.md  INTEGRATION_TESTS.md  Makefile  README.md  REGISTRATION_FLOW.md  SMART_METER_TEST_GUIDE.md  VISUAL_DIAGRAMS.md  api_endpoints.txt  backup_pre_role_migration_20251118_125326.sql  check_mint.py  check_output.txt  check_output_2.txt  compile_errors.txt  consumer.json  dev-wallet.json  docker-compose.prod.yml  docker-compose.yml  local.env  mint_output.txt  monitor-flow.sh  openapi-spec.json  readme.md  seller.json  start-apigateway.sh  test_02_output.txt  test_balance_check.sh  test_complete_flow.sh  test_e2e_minting.sh  test_event_processor.sh  test_full_loop.sh  test_minting_simple.sh  test_p2p_p2c_trading.sh  test_p2p_trading.sh  test_step2_meter_submission.sh  (+15 more)
.github/: copilot-instructions.md
.github/prompts/: plan-apiGatewayRealtimeMeterDataTokenization.prompt.md  plan-blockchainIntegration.prompt.md  plan-improveLargeFilesCode.prompt.md  plan-meterDataTokenConversion.prompt.md  plan-meterRegistrationFlow.prompt.md  plan-meterVerificationAfterEmailAuth.prompt.md  plan-realTimeSmartMeterData.prompt.md  plan-realtimeMeterDataTokenization.prompt.md  plan-refactorCodebaseBestPractices.prompt.md  plan-refactorRustCodeQuality.prompt.md  plan-settlementIntegrationAndDocumentation.prompt.md  plan-smartMeterDataFeedSpecification.prompt.md  plan-transactionTracking.prompt.md
.sqlx/: query-32541b05fac53a439a48bf414f5d495a079516c7cf11bcb2d99e454cb1d5b196.json  query-d4fae08291dbfecc815fcce52529ac94c897d21c384b6b5e10a1308010c90059.json
docker/prometheus/: prometheus.yml
docs/: DATABASE_OPERATIONS.md  DATABASE_SCHEMA.md  IMPLEMENTATION_PLAN_NEXT_STEPS.md  METER_REGISTRATION_API.md  NEXT_STEPS_PLAN.md
docs/metrics/: README.md
docs/planning/: blockchain_transaction_creation_plan.md
docs/plans/: TOS_AND_PRIVACY_POLICY_UPDATES.md  USER_KYC_BUSINESS_MODEL.md  transaction_flow_implementation.md
docs/redis/: PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  README.md  redis_implementation_checklist.md
docs/technical/: DOC_EPOCH_MANAGEMENT.md  DOC_SYSTEM_ARCHITECTURE.md  PHASE4_TOKENIZATION_GUIDE.md  REDIS_AUTHENTICATION_SETUP.md
docs/transaction-flow/: README.md  transaction-flow-plan.md
examples/: check_db_wallet.rs  fix_user_wallets.rs  init_programs.rs  setup_blockchain_env.rs  test_keypair_loading.rs  verify_blockchain_core.rs
migrations/: 20241119000001_add_meter_verification.sql  20241119000004_add_missing_tables.sql  20241126000001_add_prosumer_consumer_roles.sql  20241128000001_add_performance_indexes.sql  20241128000001_partition_meter_readings.sql  20241128000002_partition_blockchain_events.sql  20241128000002_partition_time_series_tables.sql  20241128000003_autovacuum_tuning.sql  20241128000003_create_archive_tables.sql  20251206000001_add_encrypted_wallet.sql  20251206000005_wallet_audit_log.sql  20251206000006_wallet_export_rate_limit.sql  20251206000007_key_version_tracking.sql  20251207000001_add_order_pda.sql  20260111000001_add_thd_columns.sql  20260111000002_create_meter_aggregation.sql  20260117000001_add_zone_rates.sql  20260121000000_add_blockchain_tasks.sql
postman/: CHANGELOG.md  GridTokenX-API-Gateway.postman_collection.json
scripts/: 01-test-complete-flow.sh  02-test-enhanced-flow.sh  03-comprehensive-api-test.sh  03-test-auth-routes.sh  04-test-profile-routes.sh  bootstrap_env.sh  demo-complete-flow.sh  redis_backup_automation.sh  run-performance-tests.sh  run-transaction-tests.sh  setup-redis-auth.sh  setup_monitoring.sh  setup_redis.sh  test-archival.sh  test-blockchain-connection.sh  test-complete-flow.sh  test-erc-lifecycle.sh  test-market-clearing-authenticated.sh  test-meter-registration.sh  test-meter-verification-flow.sh  test-partitioning.sh  test-redis-auth.sh  test-settlement-flow.sh  test-token-minting-e2e.sh  test-transaction-history.sh  test-transaction-monitoring.sh  test-transaction-tracking.sh
src/: app_state.rs  constants.rs  error.rs  lib.rs  main.rs  startup.rs
src/auth/: middleware.rs  mod.rs  password.rs  roles.rs
src/config/: mod.rs  tokenization.rs
src/database/: mod.rs  repository.rs  schema.rs
src/handlers/: admin.rs  analytics.rs  auth.rs  auth_stub.rs  blockchain.rs  blockchain_test.rs  carbon.rs  dashboard.rs  email_verification.rs  energy_trading.rs  energy_trading_simple.rs  epochs.rs  erc.rs  governance.rs  health.rs  key_rotation.rs  market_data.rs  meter_registration.rs  meter_verification.rs  meters.rs  metrics.rs  mod.rs  notifications.rs  oracle.rs  proxy.rs  queries.rs  registry.rs  swap.rs  token.rs  trading.rs  user_management.rs  wallet_auth.rs  wallets.rs
src/middleware/: json_validation.rs  metrics.rs  metrics_middleware.rs  mod.rs  request_logger.rs  security_headers.rs  versioning.rs
src/models/: energy.rs  meter.rs  mod.rs  notification.rs  trading.rs  transaction.rs
src/router/: admin.rs  mod.rs  protected.rs  public.rs
src/services/: amm_service.rs  audit_logger.rs  blockchain_instructions.rs  blockchain_service.rs  blockchain_transactions.rs  blockchain_utils.rs  cache_service.rs  dashboard_service.rs  email_templates.rs  epoch_scheduler.rs  erc_service.rs  event_processor_service.rs  grid_topology.rs  health_check.rs  key_rotation_service.rs  market_clearing.rs  market_clearing_service.rs  meter_analyzer.rs  meter_polling_service.rs  meter_polling_service.rs.bak  meter_service.rs  meter_verification_service.rs  mod.rs  notification_dispatcher.rs  order_matching_engine.rs  price_monitor.rs  priority_fee_service.rs  reading_processor.rs  recurring_scheduler.rs  redis_cache_warming.rs  redis_json.rs  redis_lock.rs  redis_pubsub.rs  redis_timeseries.rs  settlement_service.rs  test.welcom_email.html  traits.rs  transaction_coordinator.rs  transaction_metrics.rs  wallet_audit_logger.rs  (+4 more)
src/utils/: crypto.rs  error_tracker.rs  mod.rs  query_profiler.rs  signature.rs  (+1 more)
tests/: blockchain_task_verification.rs  check_lib.rs  p2p_verify.py  zone_analytics_test.py
(+299 files in other folders)
