[package]
name = "api-gateway"
version = "0.1.1"
edition = "2024"
description = "API Gateway for P2P Energy Trading System - Engineering Department"
authors = ["Engineering Department <wit.chanthawat@gmail.com>"]
license = "MIT"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.8.7", features = ["macros", "ws"] }
tower = { version = "0.5", features = [
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
tower-http = { version = "0.6.7", features = [
  "cors",
  "trace",
  "timeout",
  "compression-gzip",
] }
hyper = { version = "1.8.1", features = ["full"] }
http-body-util = "0.1"

# Async Runtime
tokio = { version = "1.14", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "uuid",
  "bigdecimal",
  "migrate",
  "ipnetwork",
] }
bigdecimal = { version = "0.4", features = ["serde"] }
ipnetwork = { version = "0.21.1", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = { version = "10.0", default-features = false, features = [
  "use_pem",
  "rust_crypto",
] }
bcrypt = "0.17"

# Caching
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
prometheus = "0.14.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde-float"] }
anyhow = "1.0"
thiserror = "2.0"
config = "0.15.19"
dotenvy = "0.15"
sha2 = "0.10"
rand = "0.9"
async-trait = "0.1"
once_cell = "1.19"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Validation
validator = { version = "0.20", features = ["derive"] }
regex = "1.10"

# OpenAPI Documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Email
lettre = { version = "0.11", features = [
  "tokio1-native-tls",
  "builder",
  "hostname",
] }

# Blockchain utilities
bs58 = "0.5"
solana-client = "3.0.8"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
dashmap = "6.1.0"
solana-compute-budget = "3.1.2"
solana-transaction-status = "3.1.2"
solana-pubsub-client = "3.0.0"
hmac = "0.12.1"
hex = "0.4.3"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.25"
wiremock = "0.6"
criterion = "0.7"
proptest = "1.4"
tempfile = "3.8"
once_cell = "1.19"

[[test]]
name = "erc_lifecycle_test"
path = "tests/integration/erc_lifecycle_test.rs"

[[test]]
name = "token_minting_test"
path = "tests/integration/token_minting_test.rs"

[[test]]
name = "settlement_test"
path = "tests/integration/settlement_test.rs"

[features]
default = []
test-utils = []
