[package]
name = "api-gateway"
version = "0.1.1"
edition = "2021"
description = "API Gateway for P2P Energy Trading System - Engineering Department"
authors = ["Engineering Department <wit.chanthawat@gmail.com>"]
license = "MIT"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.8.7", features = ["macros", "ws"] }
tower = { version = "0.5", features = [
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
tower-http = { version = "0.6.7", features = [
  "cors",
  "trace",
  "timeout",
  "compression-gzip",
] }
# Explicit features: http1/http2 for protocol support, server for axum
# Client feature omitted - reqwest handles outgoing HTTP requests
hyper = { version = "1.8.1", features = ["http1", "http2", "server"] }
http-body-util = "0.1"

# Async Runtime
# Explicit feature selection for production optimization:
# - rt-multi-thread: Required by axum for concurrent request handling
# - macros: Required for #[tokio::main] and #[tokio::test]
# - io-util: Required by sqlx for I/O operations
# - time: Required by sqlx for query timeouts and connection pool management
# - sync: Required for async synchronization primitives (channels, mutexes)
# - signal: Required for graceful shutdown handling
# - parking_lot: Faster synchronization primitives under high contention
tokio = { version = "1.48", features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "time",
  "sync",
  "signal",
  "parking_lot",
] }
futures = "0.3"

# Database
# Note: Offline mode in sqlx 0.8+ is enabled via SQLX_OFFLINE=true env var
# Run `cargo sqlx prepare` to generate .sqlx cache for CI builds
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "uuid",
  "rust_decimal",
  "migrate",
  "ipnetwork",
] }
bigdecimal = { version = "0.4", features = ["serde"] }
ipnetwork = { version = "0.21.1", features = ["serde"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Authentication
jsonwebtoken = { version = "10.0", default-features = false, features = [
  "use_pem",
  "rust_crypto",
] }
bcrypt = "0.17"

# Caching
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
prometheus = "0.14.0"

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { version = "1.33", features = ["serde-float", "maths"] }
anyhow = "1.0"
thiserror = { workspace = true }
config = "0.15.19"
dotenvy = "0.15"
sha2 = "0.10"
async-trait = "0.1"
once_cell = "1.19"

# HTTP Client
# Explicit features: disable defaults, enable only what's needed
# - json: JSON body serialization/deserialization
# - rustls-tls: Pure Rust TLS (no OpenSSL dependency)
# - gzip: Compressed response handling
# Omitted: http2 (not needed for most API calls), charset, system-proxy
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "gzip",
] }

# Validation
validator = { version = "0.20", features = ["derive"] }
regex = "1.10"
sysinfo = "0.33"

# OpenAPI Documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Email
lettre = { version = "0.11", features = [
  "tokio1-native-tls",
  "builder",
  "hostname",
] }

# Blockchain utilities
bs58 = "0.5"
ed25519-dalek = "2.1"
rand = { version = "0.8", features = ["std", "std_rng"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"

solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
dashmap = "6.1.0"
solana-compute-budget = { workspace = true }
solana-transaction-status = { workspace = true }
solana-pubsub-client = { workspace = true }
hmac = "0.12.1"
hex = "0.4.3"
base64 = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.25"
wiremock = "0.6"
criterion = "0.7"
proptest = "1.4"
tempfile = "3.8"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }

[[test]]
name = "erc_lifecycle_test"
path = "tests/integration/erc_lifecycle_test.rs"

[[test]]
name = "token_minting_test"
path = "tests/integration/token_minting_test.rs"

[[test]]
name = "settlement_test"
path = "tests/integration/settlement_test.rs"

[features]
default = []
test-utils = []

# Profile settings are now defined at workspace level in gridtokenx-anchor/Cargo.toml
